styles/siteStyle.css
/* ... */
@font-face {
	font-family: 'Conv_apercu_regular';
	src: url('../fonts/apercu_regular.eot');
	src: local('☺'), url('../fonts/apercu_regular.woff') format('woff'), url('../fonts/apercu_regular.ttf') format('truetype'), url('../fonts/apercu_regular.svg') format('svg');
	font-weight: normal;
	font-style: normal;
}
*{
	outline:none;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	
}
html{
    text-rendering:optimizeLegibility !important;
    -webkit-font-smoothing:antialiased !important;
	-webkit-text-stroke: 0.35px;
	background:#eef0f0;
    height:100%;
    width:100%;
	/* min-width:1024px; */
	/* max-width:1400px; */
}
html.no-transition{
	transition:none !important;
}
body{
    color:#5f5f5f;
    background-color: transparent;
    padding:0px !important;
    margin:0px !important;
    font-size:14px;
	line-height:22px;
    text-rendering:optimizeLegibility;
    /*height:100%;*/
    width:100%;
    overflow:auto;
	/* min-width:1024px; */
	/* max-width:1400px; */
	top:0 !important;
}
img,
iframe,
object{
	max-width:100%;
	vertical-align:top;
}
iframe{
	border:none;
	outline:none;
	width:100%;
}
ul,
ol{
	padding:0;
	margin:0;
}
ul li,
ol li{
	list-style:none;
}
textarea{
	overflow:auto;
}
textarea.code{
	resize:none;
	height:220px;
}
a,
a:hover,
a:focus{
    outline:none;
	-moz-transition: all 0.35s;
	-o-transition: all 0.35s;
	-webkit-transition: all 0.35s;
	transition: all 0.35s;
}
::selection {
   	background:#09A3EE;
    color:#fff;
}
::-moz-selection {
    background:#09A3EE;
    color:#fff;
}
#container{
	width:100%;
	height:100%;
	overflow: auto;
}

/* Top Nav */
header{
	background:#fff;
}
header .contain{
	max-width:1400px;
	position:relative;
	height:64px;
	max-height:64px;
}
header a.logo{
	display:inline-block;
	width:200px;
	padding:16px 15px;
	height:64px;
	line-height:38px;
}
header a.logo img{
	max-width:100%;
	position:relative;
	top:-5px;
	max-height:42px;
	vertical-align:middle;
}
header .usermenus{
	padding:15px 20px;
}
header .appid p{
	margin-top:6px;
}
header .usermenus .dropdown{
	max-width:220px;
}
header .usermenus .dropdown .dropdown-toggle:hover,
header .usermenus .dropdown.open .dropdown-toggle{
	background:#fff !important;
}
header .usermenus .dropdown + .dropdown,
header .usermenus .button{
	margin-left:15px;
}
header .usermenus .button{
	min-width:100px;
}
header .usermenus .dropdown .dropdown-menu{
	border-radius:0 0 4px 4px;
}
header .usermenus .dropdown .caret{
	height:20px;
}

/* Left Side Nav */
nav{
    width:200px;
    height:100%;
	z-index:1028;
    position:fixed;
	background-color:#fff;
	/* border-right:1px solid #26282b; */
	/* border-right:1px solid #242a36; */
	box-shadow: 0 0 8px rgba(0,0,0,.2);
}
nav ul.menu{
    padding-top:65px;
	/* color:#a6abba; */
	height:100%;
	overflow:auto;
}
nav ul.menu li{
	position:relative;
}
nav ul.menu li + li{
	border-top:1px solid #eef0f0;
	/* border-top:1px solid #242a36; */
}
/* nav ul.menu li.dark{
	background:#26282b;
	background:#242a36;
} */
nav ul.menu li.divider,
nav ul.menu li.dark a{
	padding:10px 15px 0;
}
nav ul.menu li.dark.divider{
	border-top:1px solid #111;
}
nav ul.menu li.dark a{
	padding:10px 25px;
	font-size:14px;
}
nav ul.menu li:last-child{
	border-bottom:1px solid #eef0f0;
	/* border-bottom:1px solid #242a36; */
}
nav ul.menu li .parent .current {
	font-weight: bold;
    text-decoration: underline;
}
nav ul.menu li .parent{
	color:#000;
	padding:20px 10px 20px 45px;
	/*background:url() no-repeat 10px center;
	background-size:22px 22px;*/
	display:block;
	position:relative;
	font-size:14px;
	line-height:20px;
	font-weight:300;
	cursor:pointer;
}
nav ul.menu li .parent:hover{
	text-decoration: underline;
}
nav ul.menu li .parent span.icon{
	position:absolute;
	left:15px;
	top:20px;
	font-size:17px;
}
nav ul.menu li.usermanagement .parent span.icon,
nav ul.menu li.appmanagement .parent span.icon{
	font-size:18px;
}
nav ul.menu li.datatracer .parent span.icon{
	top:21px;
}
nav ul.menu li.help .parent span.icon{
	top:21px;
}
nav ul.menu li.licenses .parent span.icon{
	top:21px;
}
nav ul.menu li.selfprovisioning .parent span.icon{
	font-size:18px;
	top:19px;
}
/* nav ul.menu li .parent:hover > span.icon,
nav ul.menu li .parent.active > span.icon{
	left:20px;
	color:#09a3ee;
} */
nav ul.menu li .parent.has-children span.chevron{
  	font-size:12px;
	position:absolute;
	top:24px;
	right:15px;
    display:inline-block;
	vertical-align:middle;
	color:#a6abba;
	-moz-transition: all 0.35s;
	-o-transition: all 0.35s;
	-webkit-transition: all 0.35s;
	transition: all 0.35s;
}
nav ul.menu li .has-children.active span.chevron{
	transform:rotate(-180deg);
	-ms-transform:rotate(-180deg);
	-webkit-transform:rotate(-180deg);
	color:#09a3ee;
}
/* nav ul.menu li .parent:hover,
nav ul.menu li .parent.active{
	padding-left:50px;
	background:#26282b;
	background:#242a36;
}
nav ul.menu li.dark .parent:hover,
nav ul.menu li.dark .parent.active{
	padding-left:30px;
}
nav ul.menu li .parent:hover > p.text,
nav ul.menu li .parent.active > p.text{
	color:#09a3ee;
} */
span.badge,
nav ul.menu li span.badge{
	padding:6px 5px 5px;
	font-size:11px;
	line-height:9px;
	font-weight:300;
	background:#26282b;
	background:#242a36;
	color:#a6abba;
}
nav ul.menu li span.badge{
	position:absolute;
	top:20px;
	right:15px;
}
nav ul.menu li .parent.has-badge{
	padding-right:50px;
}
nav ul.menu li .parent:hover > span.badge,
nav ul.menu li .parent.active > span.badge,
nav ul.menu li  ul.child-menu li a:hover > span.badge{
	color:#fff;
	background:#09A3EE;
}
nav ul.menu li .parent p.text{
	max-width:100%;
}
nav ul.menu li a.parent p.text{
	cursor:pointer;
}
nav ul.menu li .parent.has-children p.text{
	max-width:80%;
}
nav ul.menu li .parent ul.child-menu{
	height:0;
	opacity:0;
	overflow:hidden;
}
nav ul.menu li .parent.active > ul.child-menu{
	height:auto;
	padding-top:18px;
	opacity:1;
}
nav ul.menu li .parent ul.child-menu li{
	border:none;
	color:#979daa;
	text-indent:0px;
}
/* ... */

